--- a/partenariats.css
+++ b/partenariats.css
@@ -637,3 +637,6 @@ nav {
     box-shadow: 0 10px 30px rgba(0,0,0,0.20);
     filter: brightness(1.1);
 }
+.big-button {
+    border: 4px solid red !important;
+}
