--- a/partenariats.css
+++ b/partenariats.css
@@ -578,7 +578,7 @@ nav {
 
 .page-title h1 {
     font-size: 42px;
-    color: #1c95eb;
+    color: #0F42D6;
     font-weight: 800;
     letter-spacing: 1px;
 }
