--- a/partenariats.css
+++ b/partenariats.css
@@ -676,3 +676,9 @@ nav {
 .carres-container .carre-item:hover img {
     transform: scale(1.2);
 }
+.texte {
+    color: 2C7ADE;
+    font-weight: 800;
+    letter-spacing: 1px;
+    font-size: 20px;  
+}
