--- a/partenariats.css
+++ b/partenariats.css
@@ -578,7 +578,7 @@ nav {
 
 .page-title h1 {
     font-size: 42px;
-    color: #0F42D6;
+    color:  #007bff;
     font-weight: 800;
     letter-spacing: 1px;
 }
@@ -677,8 +677,8 @@ nav {
     transform: scale(1.2);
 }
 .texte {
-    color: 2C7ADE;
-    font-weight: 800;
+    color: #2C7ADE;
+    font-weight: 400;
     letter-spacing: 1px;
-    font-size: 20px;  
+    font-size: 12px;  
 }
