--- a/partenariats.css
+++ b/partenariats.css
@@ -677,8 +677,16 @@ nav {
     transform: scale(1.2);
 }
 .texte {
-    color: #2C7ADE;
-    font-weight: 400;
-    letter-spacing: 1px;
-    font-size: 12px;  
+    color: #1c95eb;
+    font-weight: 500;
+    letter-spacing: 0.5px;
+    font-size: clamp(14px, 1.2vw, 18px);  
+    max-width: 900px;
+    margin: 60px auto 80px;
+    text-align: center;
+    line-height: 1.6;
+    background: #eaf3ff;
+    padding: 30px 25px;
+    border-radius: 20px;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.1);
 }
