--- a/contact.css
+++ b/contact.css
@@ -1,17 +1,12 @@
 /* -------------------------------------- */
 /* Page Contact (CSS) */
 /* -------------------------------------- */
-.contact-page {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center; /* centre tout horizontalement */
-}
-
 .page-title {
     text-align: center;
-    margin-top: 40px;
-    margin-bottom: 30px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .page-title h1 {
