--- a/style.css
+++ b/style.css
@@ -560,7 +560,7 @@ nav {
 }
 
 .btn-reseaux {
-  background: transparent;
+  background: #f8f8f8;
   color: #1c95eb;
   border: 2px solid #1c95eb;
 }
