--- a/style.css
+++ b/style.css
@@ -524,11 +524,19 @@ nav {
   margin-bottom: 35px;
 }
 
-.commu-social img {
-  width: 42px;
-  height: 42px;
-  object-fit: contain; 
-  display: block;
+#insta-logo {
+    width: 30px;
+    height: auto;
+}
+
+#whatsapp-logo {
+    width: 45px;
+    height: auto;
+}
+
+#linkedin-logo {
+    width: 40px;
+    height: auto;
 }
 
 .commu-cta {
