--- a/style.css
+++ b/style.css
@@ -861,6 +861,12 @@ footer p {
     margin: auto;
   }
 
+  .arrow {
+    font-size: 15px;
+    width: 25px;
+    height: 25px;
+  }
+  
   .arrow.left { left: 5px; }
   .arrow.right { right: 5px; }
 
